/*
 * Copyright 2025 Cory Parent
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

use std::sync::Arc;
use tokio::sync::RwLock;
use uuid::Uuid;
use tracing::info;
use serde::{Deserialize, Serialize};

use crate::agent::real_time_coordination::{
    AgentInfo, AgentMessage,
};

// Temporarily comment out the generated protobuf code until we fix the dependencies
/*
use crate::grpc::coordination::{
    AgentInfo as ProtoAgentInfo, AgentMessage as ProtoAgentMessage, AgentStatus as ProtoAgentStatus,
    CreateSessionRequest, CreateSessionResponse, GetAgentInfoRequest, GetAgentInfoResponse,
    JoinSessionRequest, JoinSessionResponse, LeaveSessionRequest, LeaveSessionResponse,
    MessagePriority as ProtoMessagePriority, MessageType as ProtoMessageType,
    RegisterAgentRequest, RegisterAgentResponse, SendMessageRequest, SendMessageResponse,
    SendSessionMessageRequest, SendSessionMessageResponse, UnregisterAgentRequest, UnregisterAgentResponse,
    coordination_client::CoordinationClient as GrpcCoordinationClient,
};
*/

/// Syneidesis coordination client configuration
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SyneidesisConfig {
    pub enabled: bool,
    pub server_address: Option<String>,
    pub auto_register_agents: bool,
    pub sync_messages: bool,
    pub enable_health_monitoring: bool,
    pub timeout_seconds: u64,
    pub max_retries: u32,
    pub enable_tls: bool,
    pub tls_cert_path: Option<String>,
}

impl Default for SyneidesisConfig {
    fn default() -> Self {
        Self {
            enabled: false,
            server_address: Some("http://127.0.0.1:50051".to_string()),
            auto_register_agents: true,
            sync_messages: true,
            enable_health_monitoring: true,
            timeout_seconds: 30,
            max_retries: 3,
            enable_tls: false,
            tls_cert_path: None,
        }
    }
}

/// Syneidesis coordination client implementation
#[derive(Clone)]
pub struct SyneidesisCoordinationClient {
    // Temporarily use a placeholder until we have the actual Syneidesis crate
    // client: syneidesis_coordination::CoordinationClient,
    config: SyneidesisConfig,
    connection_status: Arc<RwLock<ConnectionStatus>>,
}

#[derive(Debug, Clone)]
pub enum ConnectionStatus {
    Disconnected,
    Connecting,
    Connected,
    Failed(String),
}

impl SyneidesisCoordinationClient {
    pub async fn new(config: SyneidesisConfig) -> Result<Self, Box<dyn std::error::Error>> {
        info!("Initializing Syneidesis coordination client with config: {:?}", config);
        
        let client = Self {
            config,
            connection_status: Arc::new(RwLock::new(ConnectionStatus::Disconnected)),
        };

        // Attempt to connect
        client.connect().await?;
        
        info!("✅ Syneidesis coordination client initialized successfully");
        Ok(client)
    }

    async fn connect(&self) -> Result<(), Box<dyn std::error::Error>> {
        let mut status = self.connection_status.write().await;
        *status = ConnectionStatus::Connecting;
        
        // For now, simulate connection
        // TODO: Replace with actual Syneidesis client connection
        tokio::time::sleep(tokio::time::Duration::from_millis(100)).await;
        
        *status = ConnectionStatus::Connected;
        info!("✅ Connected to Syneidesis coordination server");
        Ok(())
    }

    pub async fn register_agent(&self, agent: AgentInfo) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Registering agent '{}' with Syneidesis", agent.id);
                // TODO: Replace with actual Syneidesis agent registration
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn unregister_agent(&self, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Unregistering agent '{}' from Syneidesis", agent_id);
                // TODO: Replace with actual Syneidesis agent unregistration
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn send_message(&self, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Sending message '{}' via Syneidesis", message.id);
                // TODO: Replace with actual Syneidesis message sending
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn get_agent_info(&self, agent_id: &str) -> Result<Option<AgentInfo>, Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Getting agent info '{}' from Syneidesis", agent_id);
                // TODO: Replace with actual Syneidesis agent info retrieval
                Ok(None)
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn create_session(&self, topic: String, participants: Vec<String>) -> Result<String, Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Creating session '{}' with {} participants via Syneidesis", topic, participants.len());
                // TODO: Replace with actual Syneidesis session creation
                Ok(format!("syneidesis-session-{}", Uuid::new_v4()))
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn join_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Agent '{}' joining session '{}' via Syneidesis", agent_id, session_id);
                // TODO: Replace with actual Syneidesis session join
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn leave_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Agent '{}' leaving session '{}' via Syneidesis", agent_id, session_id);
                // TODO: Replace with actual Syneidesis session leave
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn send_session_message(&self, session_id: &str, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                info!("Sending session message '{}' to session '{}' via Syneidesis", message.id, session_id);
                // TODO: Replace with actual Syneidesis session message sending
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn get_connection_status(&self) -> ConnectionStatus {
        self.connection_status.read().await.clone()
    }

    pub async fn health_check(&self) -> Result<(), Box<dyn std::error::Error>> {
        let status = self.connection_status.read().await;
        match *status {
            ConnectionStatus::Connected => {
                // TODO: Replace with actual Syneidesis health check
                Ok(())
            }
            _ => Err("Not connected to Syneidesis server".into()),
        }
    }

    pub async fn shutdown(&self) -> Result<(), Box<dyn std::error::Error>> {
        info!("Shutting down Syneidesis coordination client");
        let mut status = self.connection_status.write().await;
        *status = ConnectionStatus::Disconnected;
        Ok(())
    }
}

/// gRPC coordination client configuration
#[derive(Debug, Clone)]
pub struct GrpcClientConfig {
    pub server_address: String,
    pub timeout_seconds: u64,
    pub max_retries: u32,
    pub enable_tls: bool,
    pub tls_cert_path: Option<String>,
}

impl Default for GrpcClientConfig {
    fn default() -> Self {
        Self {
            server_address: "http://127.0.0.1:50051".to_string(),
            timeout_seconds: 30,
            max_retries: 3,
            enable_tls: false,
            tls_cert_path: None,
        }
    }
}

/// gRPC coordination client implementation
pub struct GrpcCoordinationClient {
    // Temporarily comment out the actual client until we fix the dependencies
    // client: GrpcCoordinationClient<Channel>,
    config: GrpcClientConfig,
}

impl GrpcCoordinationClient {
    pub async fn new(config: GrpcClientConfig) -> Result<Self, Box<dyn std::error::Error>> {
        // For now, just create a placeholder client
        Ok(Self {
            config,
        })
    }

    pub async fn register_agent(&self, agent_info: AgentInfo) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the registration
        println!("Would register agent: {}", agent_info.id);
        Ok(())
    }

    pub async fn unregister_agent(&self, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the unregistration
        println!("Would unregister agent: {}", agent_id);
        Ok(())
    }

    pub async fn send_message(&self, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the message
        println!("Would send message: {}", message.id);
        Ok(())
    }

    pub async fn get_agent_info(&self, agent_id: &str) -> Result<Option<AgentInfo>, Box<dyn std::error::Error>> {
        // For now, return None
        println!("Would get agent info: {}", agent_id);
        Ok(None)
    }

    pub async fn create_session(&self, topic: String, participants: Vec<String>) -> Result<String, Box<dyn std::error::Error>> {
        // For now, return a placeholder session ID
        println!("Would create session: {} with {} participants", topic, participants.len());
        Ok("placeholder-session-id".to_string())
    }

    pub async fn join_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the join
        println!("Would join session: {} with agent: {}", session_id, agent_id);
        Ok(())
    }

    pub async fn leave_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the leave
        println!("Would leave session: {} with agent: {}", session_id, agent_id);
        Ok(())
    }

    pub async fn send_session_message(&self, session_id: &str, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        // For now, just log the session message
        println!("Would send session message: {} to session: {}", message.id, session_id);
        Ok(())
    }
}

// Temporarily comment out the full implementation until we fix the dependencies
/*
impl GrpcCoordinationClient {
    pub async fn new(config: GrpcClientConfig) -> Result<Self, Box<dyn std::error::Error>> {
        let channel = if config.enable_tls {
            let cert = std::fs::read_to_string(config.tls_cert_path.unwrap())?;
            tonic::transport::Channel::from_shared(config.server_address)?
                .tls_config(tonic::transport::ClientTlsConfig::new().ca_cert(cert))?
                .connect()
                .await?
        } else {
            tonic::transport::Channel::from_shared(config.server_address)?
                .connect()
                .await?
        };

        let client = GrpcCoordinationClient::new(channel);

        Ok(Self {
            client,
            config,
        })
    }

    pub async fn register_agent(&self, agent_info: AgentInfo) -> Result<(), Box<dyn std::error::Error>> {
        let proto_agent = ProtoAgentInfo {
            id: agent_info.id,
            name: agent_info.name,
            agent_type: agent_info.agent_type,
            status: match agent_info.status {
                AgentStatus::Idle => ProtoAgentStatus::AgentStatusIdle,
                AgentStatus::Busy => ProtoAgentStatus::AgentStatusBusy,
                AgentStatus::Working => ProtoAgentStatus::AgentStatusWorking,
                AgentStatus::Blocked => ProtoAgentStatus::AgentStatusBlocked,
                AgentStatus::Collaborating => ProtoAgentStatus::AgentStatusCollaborating,
                AgentStatus::Offline => ProtoAgentStatus::AgentStatusOffline,
            },
            current_task_id: agent_info.current_task_id,
            assigned_scope: agent_info.assigned_scope,
            capabilities: agent_info.capabilities,
            last_heartbeat: Some(prost_types::Timestamp::from(agent_info.last_heartbeat)),
            is_online: agent_info.is_online,
            performance_metrics: None,
            priority: 1,
            version: "1.0.0".to_string(),
            endpoint: None,
            metadata: std::collections::HashMap::new(),
            created_at: None,
            last_updated: None,
        };

        let request = Request::new(RegisterAgentRequest {
            agent_info: Some(proto_agent),
        });

        let response = self.client.clone().register_agent(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }

    pub async fn unregister_agent(&self, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let request = Request::new(UnregisterAgentRequest {
            agent_id: agent_id.to_string(),
        });

        let response = self.client.clone().unregister_agent(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }

    pub async fn send_message(&self, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        let proto_message = ProtoAgentMessage {
            id: message.id,
            message_type: match message.message_type {
                MessageType::TaskAssignment => ProtoMessageType::MessageTypeTaskAssignment,
                MessageType::TaskCompletion => ProtoMessageType::MessageTypeTaskCompletion,
                MessageType::TaskBlocked => ProtoMessageType::MessageTypeTaskBlocked,
                MessageType::ResourceRequest => ProtoMessageType::MessageTypeResourceRequest,
                MessageType::ResourceRelease => ProtoMessageType::MessageTypeResourceRelease,
                MessageType::ConflictNotification => ProtoMessageType::MessageTypeConflictNotification,
                MessageType::CoordinationRequest => ProtoMessageType::MessageTypeCoordinationRequest,
                MessageType::StatusUpdate => ProtoMessageType::MessageTypeStatusUpdate,
                MessageType::KnowledgeShare => ProtoMessageType::MessageTypeKnowledgeShare,
                MessageType::DecisionRequest => ProtoMessageType::MessageTypeDecisionRequest,
                MessageType::DecisionResponse => ProtoMessageType::MessageTypeDecisionResponse,
                MessageType::Custom(_) => ProtoMessageType::MessageTypeCustom,
            },
            priority: match message.priority {
                MessagePriority::Low => ProtoMessagePriority::MessagePriorityLow,
                MessagePriority::Normal => ProtoMessagePriority::MessagePriorityNormal,
                MessagePriority::High => ProtoMessagePriority::MessagePriorityHigh,
                MessagePriority::Critical => ProtoMessagePriority::MessagePriorityCritical,
                MessagePriority::Emergency => ProtoMessagePriority::MessagePriorityEmergency,
            },
            sender_id: message.sender_id,
            recipient_ids: message.recipient_ids,
            content: message.content,
            payload: message.payload.as_ref().map(|p| prost_types::Any {
                type_url: "rhema.coordination.v1.CustomPayload".to_string(),
                value: serde_json::to_vec(p).unwrap_or_default(),
            }),
            timestamp: Some(prost_types::Timestamp::from(message.timestamp)),
            requires_ack: message.requires_ack,
            expires_at: message.expires_at.as_ref().map(|dt| prost_types::Timestamp::from(*dt)),
            metadata: message.metadata,
        };

        let request = Request::new(SendMessageRequest {
            message: Some(proto_message),
        });

        let response = self.client.clone().send_message(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }

    pub async fn get_agent_info(&self, agent_id: &str) -> Result<Option<AgentInfo>, Box<dyn std::error::Error>> {
        let request = Request::new(GetAgentInfoRequest {
            agent_id: agent_id.to_string(),
        });

        let response = self.client.clone().get_agent_info(request).await?;
        let response = response.into_inner();

        if let Some(proto_agent) = response.agent_info {
            let agent_info = AgentInfo {
                id: proto_agent.id,
                name: proto_agent.name,
                agent_type: proto_agent.agent_type,
                status: match proto_agent.status() {
                    ProtoAgentStatus::AgentStatusIdle => AgentStatus::Idle,
                    ProtoAgentStatus::AgentStatusBusy => AgentStatus::Busy,
                    ProtoAgentStatus::AgentStatusWorking => AgentStatus::Working,
                    ProtoAgentStatus::AgentStatusBlocked => AgentStatus::Blocked,
                    ProtoAgentStatus::AgentStatusCollaborating => AgentStatus::Collaborating,
                    ProtoAgentStatus::AgentStatusOffline => AgentStatus::Offline,
                },
                current_task_id: proto_agent.current_task_id,
                assigned_scope: proto_agent.assigned_scope,
                capabilities: proto_agent.capabilities,
                last_heartbeat: chrono::Utc::now(),
                is_online: proto_agent.is_online,
                performance_metrics: crate::agent::real_time_coordination::AgentPerformanceMetrics::default(),
            };

            Ok(Some(agent_info))
        } else {
            Ok(None)
        }
    }

    pub async fn create_session(&self, topic: String, participants: Vec<String>) -> Result<String, Box<dyn std::error::Error>> {
        let request = Request::new(CreateSessionRequest {
            topic,
            participants,
        });

        let response = self.client.clone().create_session(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(response.session_id)
        } else {
            Err(response.message.into())
        }
    }

    pub async fn join_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let request = Request::new(JoinSessionRequest {
            session_id: session_id.to_string(),
            agent_id: agent_id.to_string(),
        });

        let response = self.client.clone().join_session(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }

    pub async fn leave_session(&self, session_id: &str, agent_id: &str) -> Result<(), Box<dyn std::error::Error>> {
        let request = Request::new(LeaveSessionRequest {
            session_id: session_id.to_string(),
            agent_id: agent_id.to_string(),
        });

        let response = self.client.clone().leave_session(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }

    pub async fn send_session_message(&self, session_id: &str, message: AgentMessage) -> Result<(), Box<dyn std::error::Error>> {
        let proto_message = ProtoAgentMessage {
            id: message.id,
            message_type: match message.message_type {
                MessageType::TaskAssignment => ProtoMessageType::MessageTypeTaskAssignment,
                MessageType::TaskCompletion => ProtoMessageType::MessageTypeTaskCompletion,
                MessageType::TaskBlocked => ProtoMessageType::MessageTypeTaskBlocked,
                MessageType::ResourceRequest => ProtoMessageType::MessageTypeResourceRequest,
                MessageType::ResourceRelease => ProtoMessageType::MessageTypeResourceRelease,
                MessageType::ConflictNotification => ProtoMessageType::MessageTypeConflictNotification,
                MessageType::CoordinationRequest => ProtoMessageType::MessageTypeCoordinationRequest,
                MessageType::StatusUpdate => ProtoMessageType::MessageTypeStatusUpdate,
                MessageType::KnowledgeShare => ProtoMessageType::MessageTypeKnowledgeShare,
                MessageType::DecisionRequest => ProtoMessageType::MessageTypeDecisionRequest,
                MessageType::DecisionResponse => ProtoMessageType::MessageTypeDecisionResponse,
                MessageType::Custom(_) => ProtoMessageType::MessageTypeCustom,
            },
            priority: match message.priority {
                MessagePriority::Low => ProtoMessagePriority::MessagePriorityLow,
                MessagePriority::Normal => ProtoMessagePriority::MessagePriorityNormal,
                MessagePriority::High => ProtoMessagePriority::MessagePriorityHigh,
                MessagePriority::Critical => ProtoMessagePriority::MessagePriorityCritical,
                MessagePriority::Emergency => ProtoMessagePriority::MessagePriorityEmergency,
            },
            sender_id: message.sender_id,
            recipient_ids: message.recipient_ids,
            content: message.content,
            payload: message.payload.as_ref().map(|p| prost_types::Any {
                type_url: "rhema.coordination.v1.CustomPayload".to_string(),
                value: serde_json::to_vec(p).unwrap_or_default(),
            }),
            timestamp: Some(prost_types::Timestamp::from(message.timestamp)),
            requires_ack: message.requires_ack,
            expires_at: message.expires_at.as_ref().map(|dt| prost_types::Timestamp::from(*dt)),
            metadata: message.metadata,
        };

        let request = Request::new(SendSessionMessageRequest {
            session_id: session_id.to_string(),
            message: Some(proto_message),
        });

        let response = self.client.clone().send_session_message(request).await?;
        let response = response.into_inner();

        if response.success {
            Ok(())
        } else {
            Err(response.message.into())
        }
    }
}
*/ 